[package]
name = "kcat"
version = "0.1.3"
authors = ["Thomas Kastanek"]
license = "MIT"
repository = "https://github.com/tckastanek/kcat"
homepage = "https://github.com/tckastanek/kcat"
description = """
Kind of like cat, but with syntax highlighting and keypathing into JSON files.
"""
keywords = ["syntax", "highlighting", "highlighter", "colouring"]
readme = "README.md"

[dependencies]
clap = "^2.3"
serde_json = "^1.0"
syntect = "^2.0"