[package]
name = "kcat"
version = "0.1.6"
authors = ["Thomas Kastanek"]
license = "MIT"
repository = "https://github.com/tckastanek/kcat"
homepage = "https://github.com/tckastanek/kcat"
description = """
Kind of like cat, but with syntax highlighting and keypathing into JSON files.
"""
keywords = ["syntax", "highlighting", "highlighter", "coloring"]
readme = "README.md"

[dependencies]
clap = "^2.33"
failure = "^0.1.5"
failure_derive = "^0.1.5"
serde_json = "^1.0"
syntect = "^3.2"